--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "autoprefixer": "^9.8.0",
-    "tailwindcss": "^1.4.6"
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
-    "live-server": "^1.2.1",
-    "postcss-cli": "^7.1.1"
+    "live-server": "^1.2.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development concurrently \"postcss public/src/tailwind.css -o public/dist/tailwind.css --watch\" \"live-server ./public\"",
